deployments-2/frontend/lh_patient_frontend/ingress-frontend-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresspatientfrontend
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host:
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
              name: servicepatientfrontend
              port:
                number: 80
