deployments-2/frontend/lh_patient_frontend/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresspatientfrontend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    #nginx.ingress.kubernetes.io/http2-push-preload: "true"
spec:
  rules:
    - host: staging-patient.com
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
              name: servicepatientfrontend
              port:
                name: http-patient
